Env Vars Correction + Reports Update
